@@ -1,5 +1,5 @@
 #define TOP_PACKAGE "ipsec-tools"
 #define TOP_PACKAGE_NAME "ipsec-tools"
-#define TOP_PACKAGE_VERSION  "0.6-nb200500507"
-#define TOP_PACKAGE_STRING  "ipsec-tools 0.6-nb20050507"
+#define TOP_PACKAGE_VERSION  "0.6-nb20050510"
+#define TOP_PACKAGE_STRING  "ipsec-tools 0.6-nb20050510"
 #define TOP_PACKAGE_URL "http://ipsec-tools.sourceforge.net"
